[YouTube] Fix uploader name, URL and verified status for some channels' content
Gaming topic channels do not upload any content, all the content is coming from
other channels.

Also, uploader name, URL and verified status come are now got as much as
possible from items instead of the channel info.